# rocket-simple-authorization

./: Cargo.toml  README.md
examples/: api.rs  get_authorization.rs  get_system_time.rs  get_system_time_api.rs
src/: lib.rs  macros.rs
