[package]
name = "rocket-simple-authorization"
version = "0.7.0"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rocket-simple-authorization"
homepage = "https://magiclen.org/rocket-simple-authorization"
keywords = ["rocket", "server", "web", "authorization", "authorize"]
categories = ["parser-implementations", "web-programming"]
description= "This crate provides a request guard builder used for authorization."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/rocket-simple-authorization", branch = "master" }

[dev-dependencies]
rocket = "0.4"
chrono = "0.4"
easy-http-request = "0.1"
short-crypt = "1"
lazy_static = "1"