[package]
name = "rocket-simple-authorization"
version = "0.9.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-simple-authorization"
homepage = "https://magiclen.org/rocket-simple-authorization"
keywords = ["rocket", "server", "web", "authorization", "authorize"]
categories = ["parser-implementations", "web-programming"]
description= "This crate provides a request guard builder used for authorization."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/rocket-simple-authorization", branch = "master" }

[dependencies]
rocket = "0.4.2"

[dev-dependencies]
chrono = "0.4"
reqwest = { version = "0.10", features = ["blocking"] }
short-crypt = "1"