[package]
name = "rocket-simple-authorization"
version = "0.10.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-simple-authorization"
homepage = "https://magiclen.org/rocket-simple-authorization"
keywords = ["rocket", "server", "web", "authorization", "authorize"]
categories = ["parser-implementations", "web-programming"]
description = "This crate provides a request guard builder used for authorization."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = { version = "0.5.0-rc.1" }

[dev-dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
short-crypt = "1"
